--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
           <iframe
             id="youtubePlayer3"
             class="video-iframe hidden"
-            src="https://www.youtube.com/embed/obW4xWXKZjw?mute=1&autoplay=1&controls=0"
+            src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
-            allow="autoplay; encrypted-media"
+            allow="autoplay; fullscreen; encrypted-media"
             allowfullscreen
           ></iframe>
         </div>
@@ -324,9 +324,9 @@
           <iframe
             id="youtubePlayer4"
             class="video-iframe hidden"
-            src="https://www.youtube.com/embed/obW4xWXKZjw?mute=1&autoplay=1&controls=0"
+            src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
-            allow="autoplay; encrypted-media"
+            allow="autoplay; fullscreen; encrypted-media"
             allowfullscreen
           ></iframe>
         </div>
@@ -386,9 +386,9 @@
           <iframe
             id="youtubePlayer5"
             class="video-iframe hidden"
-            src="https://www.youtube.com/embed/obW4xWXKZjw?mute=1&autoplay=1&controls=0"
+            src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
-            allow="autoplay; encrypted-media"
+            allow="autoplay; fullscreen; encrypted-media"
             allowfullscreen
           ></iframe>
         </div>
@@ -448,9 +448,9 @@
           <iframe
             id="youtubePlayer6"
             class="video-iframe hidden"
-            src="https://www.youtube.com/embed/obW4xWXKZjw?mute=1&autoplay=1&controls=0"
+            src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
-            allow="autoplay; encrypted-media"
+            allow="autoplay; fullscreen; encrypted-media"
             allowfullscreen
           ></iframe>
         </div>
