--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
               voluptatum veniam veritatis quia maiores repellendus
               necessitatibus facere beatae odit quod at, unde illum, aliquam
               culpa? Dignissimos voluptatum cumque fugiat cupiditate! <br />
-              <span class="mute" id="muteButton3">음소거</span>
             </p>
           </div>
         </div>
@@ -261,7 +260,7 @@
         <div class="video_bg" id="videoBg3">
           <iframe
             id="youtubePlayer3"
-            class="video-iframe hidden"
+            class="video-iframe"
             src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
             allow="autoplay; fullscreen; encrypted-media"
@@ -314,7 +313,6 @@
               voluptatum veniam veritatis quia maiores repellendus
               necessitatibus facere beatae odit quod at, unde illum, aliquam
               culpa? Dignissimos voluptatum cumque fugiat cupiditate! <br />
-              <span class="mute" id="muteButton4">음소거</span>
             </p>
           </div>
         </div>
@@ -323,7 +321,7 @@
         <div class="video_bg" id="videoBg4">
           <iframe
             id="youtubePlayer4"
-            class="video-iframe hidden"
+            class="video-iframe"
             src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
             allow="autoplay; fullscreen; encrypted-media"
@@ -376,7 +374,6 @@
               voluptatum veniam veritatis quia maiores repellendus
               necessitatibus facere beatae odit quod at, unde illum, aliquam
               culpa? Dignissimos voluptatum cumque fugiat cupiditate! <br />
-              <span class="mute" id="muteButton5">음소거</span>
             </p>
           </div>
         </div>
@@ -385,7 +382,7 @@
         <div class="video_bg" id="videoBg5">
           <iframe
             id="youtubePlayer5"
-            class="video-iframe hidden"
+            class="video-iframe"
             src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
             allow="autoplay; fullscreen; encrypted-media"
@@ -438,7 +435,6 @@
               voluptatum veniam veritatis quia maiores repellendus
               necessitatibus facere beatae odit quod at, unde illum, aliquam
               culpa? Dignissimos voluptatum cumque fugiat cupiditate! <br />
-              <span class="mute" id="muteButton6">음소거</span>
             </p>
           </div>
         </div>
@@ -447,7 +443,7 @@
         <div class="video_bg" id="videoBg6">
           <iframe
             id="youtubePlayer6"
-            class="video-iframe hidden"
+            class="video-iframe"
             src="https://www.youtube.com/embed/obW4xWXKZjw?enablejsapi=1&mute=1&autoplay=1&controls=0"
             frameborder="0"
             allow="autoplay; fullscreen; encrypted-media"
